--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-slick": "^0.30.2",
     "rsuite": "^5.70.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.13",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
